# Hexxagon

./: .gitignore  .gitmodules  Board.cpp  Board.h  CMakeLists.txt  Doxyfile  GameController.cpp  GameController.h  GameScreen.cpp  GameScreen.h  HexGridTools.cpp  HexGridTools.h  HexxagonGame.cpp  HexxagonGame.h  README.md  Screen.h  Tile.h  TileState.h  dependencies.sh  main.cpp
inc/: GameScreen.h  GameView.h  HexxagonGame.h  Lobby.h  MenuScreen.h  Player.h  Program.h  ProgramState.h  Screen.h  ServerConnection.h
inc/network/messages/: Message.h
inc/network/messages/client/: CreateNewLobby.h  GameMove.h  GetAvailableLobbies.h  JoinLobby.h  LeaveGame.h  LeaveLobby.h  StartGame.h
inc/network/messages/server/: AvailableLobbies.h  GameStarted.h  GameStatus.h  LobbyCreated.h  LobbyJoined.h  LobbyStatus.h  Strike.h  Welcome.h
inc/screens/: GameEndScreen.h  GameScreen.h  LobbyScreen.h  LobbySelectScreen.h  MenuScreen.h
inc/util/: FontUtil.h  GraphicsUtil.h
inc/view/: Button.h  TextBox.h
network/messages/: Message.cpp  Message.h  MessageType.h
network/messages/client/: CreateNewLobby.cpp  CreateNewLobby.h  GameMove.cpp  GameMove.h  GetAvailableLobbies.cpp  GetAvailableLobbies.h  JoinLobby.cpp  JoinLobby.h  LeaveGame.cpp  LeaveGame.h  LeaveLobby.cpp  LeaveLobby.h  StartGame.cpp  StartGame.h
network/messages/server/: AvailableLobbies.cpp  AvailableLobbies.h  GameStarted.cpp  GameStarted.h  GameStatus.cpp  GameStatus.h  LobbyCreated.cpp  LobbyCreated.h  LobbyJoined.cpp  LobbyJoined.h  LobbyStatus.cpp  LobbyStatus.h  Strike.cpp  Strike.h  Welcome.cpp  Welcome.h
src/: Board.h  GameScreen.cpp  GameView.cpp  HexGridTools.cpp  HexxagonGame.cpp  Lobby.cpp  MenuScreen.cpp  MenuScreen.h  Player.cpp  Program.cpp  ServerConnection.cpp  Tile.cpp  main.cpp
src/controller/: Program.cpp  Program.h  ProgramState.h
src/messages/: Message.cpp  Message.h  MessageType.h
src/messages/client/: CreateNewLobby.cpp  CreateNewLobby.h  GameMove.cpp  GameMove.h  GetAvailableLobbies.cpp  GetAvailableLobbies.h  JoinLobby.cpp  JoinLobby.h  LeaveGame.h  LeaveLobby.cpp  LeaveLobby.h  StartGame.cpp  StartGame.h
src/messages/server/: AvailableLobbies.cpp  AvailableLobbies.h  GameStarted.cpp  GameStarted.h  GameStatus.cpp  GameStatus.h  LobbyCreated.h  LobbyJoined.cpp  LobbyJoined.h  LobbyStatus.cpp  LobbyStatus.h  Strike.h  Welcome.cpp  Welcome.h
src/model/: Board.cpp  Board.h  HexxagonGame.cpp  HexxagonGame.h  Lobby.cpp  Lobby.h  Player.h  Tile.cpp  Tile.h  TileEnum.cpp  TileEnum.h  TileState.h
src/network/: ServerConnection.cpp  ServerConnection.h
src/screens/: GameEndScreen.cpp  GameEndScreen.h  GameScreen.cpp  GameScreen.h  HexxagonGame.cpp  LobbyScreen.cpp  LobbySelectScreen.cpp  LobbySelectScreen.h  MenuScreen.cpp  MenuScreen.h  Screen.h
src/util/: FontUtil.cpp  FontUtil.h  GraphicsUtil.cpp  GraphicsUtil.h  HexGridTools.cpp  HexGridTools.h  OptionalSerialization.h  TileEnumUtil.cpp  TileEnumUtil.h  UUID.h
src/view/: Button.cpp  GameView.cpp  GameView.h  TextBox.cpp
test/: hexGrid.cpp  json.cpp  main.cpp
